@@ -1,11 +1,10 @@
 package com.nhl.link.move.writer;
 
+import com.nhl.link.move.LmRuntimeException;
 import org.apache.cayenne.DataObject;
 import org.apache.cayenne.ObjectId;
 import org.apache.cayenne.map.DbAttribute;
 import org.apache.cayenne.util.Util;
-
-import com.nhl.link.move.LmRuntimeException;
 
 /**
  * @since 1.4
@@ -25,7 +24,13 @@ public class TargetPkPropertyWriter implements TargetPropertyWriter {
 	}
 
 	@Override
-	public boolean write(DataObject target, Object value) {
+	public void write(DataObject target, Object value) {
+		// regular meaningless PK
+		target.getObjectId().getReplacementIdMap().put(pk.getName(), value);
+	}
+
+	@Override
+	public boolean willWrite(DataObject target, Object value) {
 
 		ObjectId id = target.getObjectId();
 
@@ -37,17 +42,10 @@ public class TargetPkPropertyWriter implements TargetPropertyWriter {
 			return false;
 		}
 
-		// PK is auto-generated ... This is sorta expected to fail -
-		// generated meaningless PK should not be pushed from the client
-
 		if (pk.isGenerated()) {
 			throw new LmRuntimeException("'" + pk.getName()
 					+ "' is autogenerated and is not allowed to be synced from source.");
 		}
-
-		// regular meaningless PK
-		target.getObjectId().getReplacementIdMap().put(pk.getName(), value);
-
 		return true;
 	}
 }
