@@ -18,24 +18,22 @@ public class TargetToOnePropertyWriter implements TargetPropertyWriter {
 	}
 
 	@Override
-	public boolean write(DataObject target, Object value) {
+	public void write(DataObject target, Object value) {
 
 		// TODO: the strategy depends on the value of
 		// 'property.getRelationship().isSourceIndependentFromTargetChange()'
 		// e.g. for the master side of a propagated PK, this property should be
 		// handled via a PK writer (?)
 
-		boolean updated = false;
+		DataObject newValue = resolveRelatedObject(target.getObjectContext(), value);
+		property.setTarget(target, newValue, true);
+	}
 
+	@Override
+	public boolean willWrite(DataObject target, Object value) {
 		Object oldValue = property.readProperty(target);
 		DataObject newValue = resolveRelatedObject(target.getObjectContext(), value);
-
-		if (!Util.nullSafeEquals(oldValue, newValue)) {
-			property.setTarget(target, newValue, true);
-			updated = true;
-		}
-
-		return updated;
+		return !Util.nullSafeEquals(oldValue, newValue);
 	}
 
 	private DataObject resolveRelatedObject(ObjectContext context, Object relatedId) {
