@@ -20,17 +20,17 @@ public class TargetTransientPropertyWriter implements TargetPropertyWriter {
     }
 
     @Override
-    public boolean write(DataObject target, Object value) {
-
+    public void write(DataObject target, Object value) {
         try {
             setter.invoke(target, value);
-            return true;
-
         } catch (Exception e) {
             LOGGER.warn("Failed to invoke setter method with name '" + setter.getName() +
                     "' on object of type: " + target.getClass().getName(), e);
         }
+    }
 
-        return false;
+    @Override
+    public boolean willWrite(DataObject target, Object value) {
+        return true;
     }
 }
